--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -66,7 +66,11 @@
       <div class="avatar-container">
         <div class="avatar-img-border">
           <a title="{{ .Site.Title }}" href="{{ "" | absLangURL }}">
+          {{ if isset .Params "nav" }}
+            <img class="avatar-img" src="{{ .Params.nav | absURL }}" alt="{{ .Site.Title }}" />
+          {{else}}
             <img class="avatar-img" src="{{ .Site.Params.logo | absURL }}" alt="{{ .Site.Title }}" />
+          {{end}}
           </a>
         </div>
       </div>
