--- a/static/css/main.css
+++ b/static/css/main.css
@@ -62,6 +62,10 @@ hr.small {
 .main-content {
   padding-top: 80px;
 }
+
+.ncb-content {
+  position: relative;
+}
 @media only screen and (min-width: 768px) {
   .main-content {
     padding-top: 130px;
@@ -309,10 +313,6 @@ footer a {
   color: #404040;
 }
 
-footer .list-inline {
-  margin: 0;
-  padding: 0;
-}
 footer .copyright {
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   text-align: center;
@@ -711,12 +711,6 @@ table tr td :last-child {
   margin-bottom: 0;
 }
 
-/* --- Social media sharing section --- */
-
-#social-share-section {
-  margin-bottom: 30px;
-}
-
 /* --- Google Custom Search Engine Popup --- */
 #modalSearch table tr, #modalSearch table tr td, #modalSearch table tr th {
   border:none;
@@ -780,17 +774,26 @@ h4.see-also {
 }
 
 /* Sharing */
+.share-box {
+  display: block;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+
  ul.share {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  position: sticky;
+  top: 100px;
+  width: 36px;
   list-style: none;
-  margin: 0;
   padding: 0;
+  list-style-position: outside!important;
 }
  ul.share li {
   display: inline-flex;
-  margin-right: 5px;
+  margin-right: 0px;
+  margin-bottom: 20px;
 }
  ul.share li:last-of-type {
   margin-right: 0;
