--- a/static/css/main.css
+++ b/static/css/main.css
@@ -141,21 +141,26 @@ img {
 /* --- Navbar --- */
 
 .navbar-custom {
-  background: #F5F5F5;
+  background: #000000;
   border-bottom: 1px solid #EAEAEA;
   font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .navbar-custom .nav li a {
-  text-transform: uppercase;
-  font-size: 12px;
+  font-size: 16px;
   letter-spacing: 1px;
 }
 
 .navbar-custom .navbar-brand,
 .navbar-custom .nav li a {
   font-weight: 800;
-  color: #404040;
+  color: #FFFFFF;
+}
+
+
+.navbar-custom .navbar-right li a {
+  font-weight: 100;
+  color: #FFFFFF;
 }
 
 .navbar-custom .navbar-brand:hover,
